[gd_scene load_steps=3 format=3 uid="uid://defkq2ohdpcro"]

[ext_resource type="Script" uid="uid://b3v6p4ih0dwkp" path="res://Scripts/grid_cell.gd" id="1_a7rwb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a7rwb"]
bg_color = Color(0.16470589, 0.12156863, 0.101960786, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2901961, 0.24705882, 0.16470589, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="GridCell" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_a7rwb")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a7rwb")

[node name="GridNumber" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.5411765, 0.47843137, 0.41568628, 1)
theme_override_font_sizes/font_size = 24
text = "8"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LetterIndicator" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 2.0
offset_right = 44.0
offset_bottom = 25.0
theme_override_colors/font_color = Color(1, 0.33333334, 0.33333334, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 14
text = "L"

[node name="SlabContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
